--- a/app.yaml
+++ b/app.yaml
@@ -2,8 +2,21 @@ runtime: python27
 api_version: 1
 threadsafe: true
 handlers:
-- url: /
-  static_files: build/index.html
+- url: /(.*\.(html|css|js|png|jpg|woff|json))
+  static_files: build/\1
+  upload: build/(.*\.(html|css|js|png|jpg|woff|json))
+- url: /.*
+  static_files: dist/index.html
   upload: build/index.html
 - url: /
   static_dir: build
+skip_files:
+- app/
+- node_modules/
+- ^\.git/.*
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
+- ^(.*/)?.*\.bak$
