--- a/app.yaml
+++ b/app.yaml
@@ -6,7 +6,7 @@ handlers:
   static_files: build/\1
   upload: build/(.*\.(html|css|js|png|jpg|woff|json))
 - url: /.*
-  static_files: dist/index.html
+  static_files: build/index.html
   upload: build/index.html
 - url: /
   static_dir: build
