--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
       - uses: actions/checkout@v1
       - uses: actions-hub/gcloud@master
