Changes where to look for files

--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,7 @@ threadsafe: true
 handlers:
 - url: /(.*\.(html|css|js|png|jpg|woff|json))
   static_files: build/\1
-  upload: build/(.*\.(html|css|js|png|jpg|woff|json))
+  upload: build/.*/(.*\.(html|css|js|png|jpg|woff|json))
 - url: /.*
   static_files: build/index.html
   upload: build/index.html
