--- a/app.yaml
+++ b/app.yaml
@@ -3,13 +3,13 @@ api_version: 1
 threadsafe: true
 handlers:
 - url: /(.*\.(html|css|js|png|jpg|woff|json))
-  static_files: build/\1
-  upload: build/.*/(.*\.(html|css|js|png|jpg|woff|json))
+  static_files: dist/\1
+  upload: dist/.*/(.*\.(html|css|js|png|jpg|woff|json))
 - url: /.*
-  static_files: build/index.html
-  upload: build/index.html
+  static_files: dist/index.html
+  upload: dist/index.html
 - url: /
-  static_dir: build
+  static_dir: dist
 skip_files:
 - src/
 - node_modules/
