--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    - run: ls -al
     - uses: actions/checkout@v1
     - uses: 
     - uses: actions-hub/gcloud@master
@@ -29,5 +30,4 @@ jobs:
         APPLICATION_CREDENTIALS: ${{secrets.GOOGLE_APPLICATION_CREDENTIALS}}
       with:
         args: app deploy
-      run: ls -al
         
